# ckziu-codefest-api

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.Docker.md  README.md  build.rs  compose.yaml
.github/workflows/: docker-image.yml
migrations/: 0001_users_table.sql  0002_auth_table.sql  0003_projects_table.sql  0004_projects_data_table.sql  0005_projects_likes.sql  0006_add_projects_data.sql  0007_remove_projects_data.sql  0008_add_codefest_candidate.sql  0009_add_posts.sql  0011_posts_likes.sql
patches/: 0.9.md
src/: auth.rs  database.rs  error.rs  file.rs  mail.rs  main.rs  models.rs  prelude.rs  project.rs  projects.rs  routes.rs  scrap.rs  security.rs  test.rs  user.rs  users.rs  utils.rs
src/auth/: api.rs  auth.rs  db.rs  header.rs  jwt.rs  mod.rs  models.rs  otp.rs  password.rs  req.rs  routes.rs
src/contest/: mod.rs
src/db/: mod.rs
src/gateway/: handler.rs  message.rs  mod.rs  opcode.rs  routes.rs
src/panel/: api.rs
src/posts/: api.rs  mod.rs  routes.rs
src/project/: api.rs  db.rs  mod.rs  models.rs  responses.rs  routes.rs
src/upload/: api.rs
src/user/: api.rs  db.rs  mod.rs  models.rs  responses.rs  routes.rs
