[package]
name = "ckziu-codefest-api"
authors = ["Tymon Woźniak <tymon.student@gmail.com>"]
version = "0.1.0"
publish = false
edition = "2021"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
warp = { version = "0.3.6", features = ["tls"] }
reqwest = "0.12.3"
scraper = "0.19.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "json", "postgres", "runtime-tokio-native-tls", "chrono", "uuid"] }
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.37", features = ["serde"] }
thiserror = "1.0.58"
log = "0.4.21"
env_logger = "0.11.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
lettre = { version = "0.11.6", default-features = false, features = ["smtp-transport", "builder", "native-tls"] }
rustls-webpki = { version = "0.102.0-alpha.7" }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
rand = "0.8.5"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }
futures = "0.3.30"
crypto = { version = "0.5.1", features = ["password-hash"] }
bcrypt = "0.15.1"
regex = "1.10.4"
