[package]
name = "ckziu-codefest-api"
authors = ["Tymon Woźniak <tymon.student@gmail.com>"]
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "fs"] }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0.115", default-features = false }
warp = { version = "0.3.6", features = ["tls", "multipart"], default-features = false }
reqwest = { version = "0.12.3", default-features = false, features = ["native-tls-vendored"] }
scraper = { version = "0.19.0", default-features = false }
sqlx = { version = "0.7", features = ["chrono", "macros", "migrate", "postgres", "uuid", "runtime-tokio", "tls-native-tls"], default-features = false }
jsonwebtoken = { version = "9.3.0", default-features = false }
chrono = { version = "0.4.37", features = ["serde"], default-features = false }
thiserror = "1.0.58"
log = "0.4.21"
env_logger = { version = "0.11.3" }
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
lettre = { version = "0.11.6", default-features = false, features = ["builder", "native-tls", "smtp-transport"] }
rustls-webpki = { version = "0.102.0-alpha.7", default-features = false }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
rand = { version = "0.8.5", default-features = false }
uuid = { version = "1.8.0", features = ["serde", "v4"], default-features = false }
futures = { version = "0.3.30", default-features = false }
crypto = "0.5.1"
bcrypt = { version = "0.15.1", features = ["std"], default-features = false }
regex = { version = "1.10.4", default-features = false }
redis = { version = "0.25.3", features = ["tokio"], default-features = false }
native-tls = "0.2"
bytes = "1.6.0"
